Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis

---------------------------
  Jackdmp changes log
---------------------------

2009-11-13 Stephane Letz  <letz@grame.fr>

	* Better memory allocation error checking in ringbuffer.c, weak import improvements.

2009-11-12 Stephane Letz  <letz@grame.fr>

	* Better memory allocation error checking on client (library) side. 

2009-11-11 Stephane Letz  <letz@grame.fr>

	* Correct JackCoreAudio driver when empty strings are given as -C, -P or -d parameter. 

2009-11-10 Stephane Letz  <letz@grame.fr>

	* Correct JackInfoShutdownCallback prototype, two new JackClientProcessFailure and JackClientZombie JackStatus code.  

2009-11-09 Stephane Letz  <letz@grame.fr>

	* Correct JackGraphManager::GetBuffer for the "client loop with one connection" case : buffer must be copied.

2009-11-07 Stephane Letz  <letz@grame.fr>

	* Fix AcquireRealTime and DropRealTime: now distinguish when called from another thread (AcquireRealTime/DropRealTime) and from the thread itself (AcquireSelfRealTime/DropSelfRealTime).
	* Correct JackPosixThread::StartImp : thread priority setting now done in the RT case only.

2009-11-06 Stephane Letz  <letz@grame.fr>

	* Correctly save and restore RT mode state in freewheel mode.
	* Correct freewheel code on client side.

2009-11-05 Stephane Letz  <letz@grame.fr>

	* No reason to make jack_on_shutdown deprecated, so revert the incorrect change.
	* Thread AcquireRealTime and DropRealTime were (incorrectly) using fThread field. Use pthread_self()) (or GetCurrentThread() on Windows) to get the calling thread.

2009-10-30 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudioDriver, improve management of input/output channels: -1 is now used internally to indicate a wanted max value. 
	* In JackCoreAudioDriver::OpenAUHAL, correct stream format setup and cleanup. 